# controlevendas

./: README.md  pyproject.toml
app/registros/: Cliente.py  Produto.py  Venda.py  __init__.py
tests/: test_cliente.py  test_venda.py
