[tool.poetry]
name = "controlevendas"
version = "0.1.0"
description = "repo"
authors = ["Luiz Fernando <luizfernando.lf355@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
